@@ -1,23 +1,36 @@
 #!/bin/bash
 
-BASENAME=${0##*/}                                                                                                               
-COMPONENT=${BASENAME%.sh}                                                                                                       
-# yuck, because readlink -f not available on OS X.
-cd $(dirname $0)/..
+canonicalize() {
+  local _TARGET _BASEDIR
+  _TARGET="$0"
+  readlink -f $_TARGET 2>/dev/null || (
+    cd $(dirname "$_TARGET")
+    _TARGET=$(basename "$_TARGET")
 
-BASEDIR=$(pwd) 
+    while [ -L "$_TARGET" ]
+    do
+      _TARGET=$(readlink "$_TARGET")
+      cd $(dirname "$_TARGET")
+      _TARGET=$(basename "$_TARGET")
+    done
+    _BASEDIR=$(pwd -P)
+    echo "$_BASEDIR/$_TARGET"
+  )
+}
 
-SCRIPTDIR=${BASEDIR}/scripts
+BASENAME=${0##*/}
+COMPONENT=${BASENAME%.sh}
 PROJECT=og-bloombergexample
 PROJECTJAR=${PROJECT}.jar
-
+BASEDIR="$(dirname "$(dirname "$(canonicalize "$0")")")"
+SCRIPTDIR=${BASEDIR}/scripts
 cd "${BASEDIR}" || exit 1
 
 if [ ! -f ${BASEDIR}/install/db/hsqldb/bloombergexample-db.properties ]; then
   echo The ${PROJECT} database could not be found.
   echo Please run ${SCRIPTDIR}/init-${PROJECT}-db.sh to create and populate the database.
   echo Exiting immediately...
-  exit
+  exit 1
 fi
 
 . ${SCRIPTDIR}/componentserver-init-utils.sh
@@ -28,6 +41,7 @@ load_default_config
 # Component specific default configs
 CONFIG=classpath:fullstack/fullstack-bloombergexample-bin.properties
 LOGBACK_CONFIG=jetty-logback.xml
+MEM_OPTS="-Xms768m -Xmx1280m -XX:MaxPermSize=256m"
 
 # User customizations
 load_component_config ${PROJECT} ${COMPONENT}
@@ -45,21 +59,24 @@ case "$1" in
   start)
     start
     ;;
-  debug)
-    debug
-    ;;
   stop)
     stop
     ;;
   status)
     status
     ;;
+  debug)
+    debug
+    ;;
+  showconfig)
+    showconfig
+    ;;
   restart|reload)
     stop
     start
     ;;
   *)
-    echo "Usage: $0 {start|stop|restart|status|reload|debug}"
+    echo "Usage: $0 {start|stop|restart|status|showconfig|debug|reload}"
 esac
 
 exit ${RETVAL}
